# LiveResearchBench

./: .env.example  .gitignore  CONTRIBUTING.md  DATASET.md  DEPTH_EVALUATION.md  GETTING_STARTED.md  MULTI_PROVIDER_GUIDE.md  README.md  average_results.py  main.py  preprocess.py  pyproject.toml  run_multi_provider_evaluation.py
configs/: batch_config.yaml  batch_config.yaml.example  multi_provider_config.yaml  multi_provider_config.yaml.example
data/checklists/: coverage_checklist.csv
data/reference_reports/: qid_infoco2F10Hm9IIrzZsKJR_report.md  qid_infocoAHb8t0CYTuzTCznB_report.md  qid_infocoBp2TDUwPt62Iqzak_report.md  qid_infocoJLRVFHl1BaiGQqQL_report.md  qid_infocoK5coAaUHa2SScywL_report.md  qid_infocoTspDptS95JzUHtfS_report.md  qid_infocoUaNfGu8KK80qMmpg_report.md  qid_infocoXlRepzUFvAfGkcSn_report.md  qid_infocofdGCuUpiHMZhcQb7_report.md  qid_infocomcw7CBtHAmVbvEYm_report.md  qid_lifesp2DJmlulFMDdLb7hA_report.md  qid_lifesp3KjIoCKZxJ10IgVh_report.md  qid_lifesp3dNgib6HFZgsHUFR_report.md  qid_lifesp8v3mXG5wlyL56xms_report.md  qid_lifespOPMqhxL5pPFJsWd8_report.md  qid_lifespUycUsYiR4GtRfrKQ_report.md  qid_lifespX6WTipV09EAveX19_report.md  qid_lifespct5j7cnT3WZc8oRa_report.md  qid_lifespjtHZwYQLi8NU6SdU_report.md  qid_lifespwgR2QorAuHgkzask_report.md  qid_market6VWmPyxptfK47civ_report.md  (+79 more)
docs/: DATASET.md
liveresearchbench/: __init__.py  batch_evaluator.py
scripts/: batch_grade.sh  batch_grade_multi_provider.sh  download_dataset.sh  preprocess_all.sh
tests/: run_all_tests.sh  test_basic.py  test_grading.py  test_mock_grading.py  test_real_grading.py
(+15 files in other folders)
